--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@200;400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Oswald&display=swap");
+
 body {
   background-image: url(../public/sfondo.jpg);
-  font-family: "Raleway", sans-serif;
+  font-family: "Oswald", sans-serif;
 }
 
 .weather-card-now {
@@ -53,4 +54,8 @@ option.city {
 }
 option.city:hover {
   background-color: white;
+}
+
+.subtitle {
+  font-size: large;
 }
